RESOLVED FIXED205497
[GTK] InputMethod API unit tests don't work under X11
https://bugs.webkit.org/show_bug.cgi?id=205497
Summary [GTK] InputMethod API unit tests don't work under X11
Carlos Garcia Campos
Reported 2019-12-20 05:29:21 PST
The input method filter requires the web view to be focused to be enabled. Under X11 we only get the focus if the parent window is a toplevel and tests were using a popup. Using a toplevelo is enough for X11 with a window manager, but not for tests running under xvfb because there isn't a window manager. We need to assume the web view is always focused when running the tests under xvfb
Attachments
Patch (8.42 KB, patch)
2019-12-20 05:32 PST, Carlos Garcia Campos
no flags
Patch (8.44 KB, patch)
2019-12-20 05:56 PST, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2019-12-20 05:32:54 PST
EWS Watchlist
Comment 2 2019-12-20 05:33:45 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2019-12-20 05:56:01 PST
Carlos Garcia Campos
Comment 4 2019-12-23 02:06:37 PST
Note You need to log in before you can comment on or make changes to this bug.