[GTK] InputMethod API unit tests don't work under X11 https://bugs.webkit.org/show_bug.cgi?id=205497

Reviewed by Žan Doberšek.

Source/WebKit:

Assume the web view is always focused when running tests under Xvfb, since there isn't a window manager to focus
the toplevel window in that case.

* UIProcess/API/glib/InputMethodFilter.cpp:
(WebKit::InputMethodFilter::isViewFocused const):

Tools:

Use a toplevel window instead of a popup for the input method tests, since that's required in X11 to get the web
view focused.

* TestWebKitAPI/Tests/WebKitGLib/TestInputMethodContext.cpp:
(testWebKitInputMethodContextSimple):
(testWebKitInputMethodContextSequence):
(testWebKitInputMethodContextInvalidSequence):
(testWebKitInputMethodContextCancelSequence):
(testWebKitInputMethodContextReset):

Canonical link: https://commits.webkit.org/218761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253882 268f45cc-cd09-0410-ab3c-d52691b4dbfc